adams_cluster/site2/site2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site2-nodeport-service
spec:
  type: NodePort
  ports:
    - targetPort: 80 # this is the port the app is listening on, in this case an nginx container listening on port 80
      port: 80 # this is the port the service is listening to within its own IP
      nodePort: 30009 # this is the port the node listens on. in the minikube setup, since minikube is the node, it is minikube ip

  selector:
    app: site2-website
    type: frontend
