adams_cluster/site2/site2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: adams-cluster.net
    http:
      paths:
      - path: /site2
        pathType: Prefix
        backend:
          service:
            name: site2-nodeport-service
            port:
              number: 80
